# QtCalculatorExample

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Compute/: CMakeLists.txt  NotationType.h  TypeHelper.h  evaluationsettings.cpp  evaluationsettings.h  expression.cpp  expression.h  expressiontest.cpp  expressiontest.h  mathtools.cpp  mathtools.h  shuntingyard.cpp  shuntingyard.h  tokenizer.cpp  tokenizer.h
Compute/Exceptions/: computeexception.cpp  computeexception.h
Compute/TestCases/: ietestcase.h  itestcase.h  testcase.h
Compute/TokenReaders/: functiontokenreader.cpp  functiontokenreader.h  operatortokenreader.cpp  operatortokenreader.h  tokenreader.cpp  tokenreader.h  valuetokenreader.cpp  valuetokenreader.h
Compute/Tokens/: commandtoken.cpp  commandtoken.h  token.h  valuetoken.cpp  valuetoken.h
Compute/Tokens/Functions/: absfunctiontoken.cpp  absfunctiontoken.h  functiontoken.cpp  functiontoken.h  maxfunctiontoken.cpp  maxfunctiontoken.h  minfunctiontoken.cpp  minfunctiontoken.h
Compute/Tokens/Functions/Trigonometric/: acosfunctiontoken.cpp  acosfunctiontoken.h  asinfunctiontoken.cpp  asinfunctiontoken.h  atanfunctiontoken.cpp  atanfunctiontoken.h  cosfunctiontoken.cpp  cosfunctiontoken.h  sinfunctiontoken.cpp  sinfunctiontoken.h  tanfunctiontoken.cpp  tanfunctiontoken.h
Compute/Tokens/Groupings/: StartParenthesisToken.h  commatoken.cpp  commatoken.h  endparenthesistoken.cpp  endparenthesistoken.h  startparenthesistoken.cpp
Compute/Tokens/Operators/: divideoperatortoken.cpp  divideoperatortoken.h  minusoperatortoken.cpp  minusoperatortoken.h  negateoperatortoken.cpp  negateoperatortoken.h  operatortoken.cpp  operatortoken.h  plusoperatortoken.cpp  plusoperatortoken.h  powoperatortoken.cpp  powoperatortoken.h  timesoperatortoken.cpp  timesoperatortoken.h
NumberWidget/: CMakeLists.txt  numberwidget.cpp  numberwidget.h  numberwidget.ui
NumberWidget/Controls/: numberpad.cpp  numberpad.h  numberpad.ui  operators.cpp  operators.h  operators.ui  parenthesis.cpp  parenthesis.h  parenthesis.ui  trigonometry.cpp  trigonometry.h  trigonometry.ui
